--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_black">#1E1919</color>
+    <color name="orange">#FF5722</color>
+    <color name="dark_blue">#12013A</color>
+    <color name="dark_gray">#525952</color>
+    <color name="light_gray">#CFD5CF</color>
 </resources>
