--- a/app/src/main/res/layout/contac_list_item.xml
+++ b/app/src/main/res/layout/contac_list_item.xml
@@ -3,20 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="8dp"
-    android:orientation="vertical" >
+    android:gravity="center"
+    android:orientation="horizontal" >
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/contactName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="24sp"
-        tools:text="Alexandre Araújo"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_weight="0.1"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:src="@drawable/ic_baseline_person_24"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"
+        app:civ_circle_background_color="@color/light_black"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/contactNumber"
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        tools:text="(13)33534433"/>
+        android:layout_weight="0.6"
+        android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/contactName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            tools:text="Alexandre Araújo"/>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/contactNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            tools:text="(13)33534433"/>
+    </LinearLayout>
+
 </LinearLayout>
