--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -5,14 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="40dp"
-    android:padding="24dp"
     tools:context=".view.ContactActivity">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/orange"
+        app:titleTextColor="@color/light_gray"
+        app:title="Contact"
+        android:elevation="4dp"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="24dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
+        android:layout_marginTop="40dp"
         android:src="@drawable/ic_baseline_person_24"/>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -70,6 +84,8 @@
             android:background="@color/dark_blue"
             android:layout_margin="2dp"
             android:text="@string/delete_label"/>
+
+    </LinearLayout>
 
     </LinearLayout>
 
